tests/errors/bundle/multi-bad-access.fil
comp main<'G:1>() -> () {
    bundle f[2][2]: ['G, 'G+1] 32;
    f{0} = f{1};
}